added html to chicken pot pie recipe

--- a/recipes/chicken-pot-pie.html
+++ b/recipes/chicken-pot-pie.html
@@ -7,5 +7,29 @@
 
     <body>
         <h1>Chicken Pot Pie</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1092033.jpg&w=596&h=792&c=sc&poi=face&q=85" alt="piece of chicken pot pit on a plate">
+          <h2>Homemade Chicken Pot Pie</h2>
+            <p>A chicken pot pie, loaded with vegetables and protein, is a meal in itself. The high quality ingredients and generous filling really differentiates this from the ones you’ll find in the freezer section. Once you try homemade, there’s no going back!</p>
+          
+            <h3>Ingredients</h3>  
+              <ul>
+                <li><strong>Double Pie Crust -</strong> You’ll need two pie disks for the top and bottom.</li>
+                <li><strong>Chicken -</strong> Use shredded cooked chicken from a rotisserie chicken or cook your own chicken breasts.</li>
+                <li><strong>Butter & Flour -</strong> These make the roux or base for the gravy sauce.</li>
+                <li><strong>Onion, Carrots, Mushrooms, & Peas -</strong> This is loaded with vegetables.</li>
+                <li><strong>Garlic & Parsley -</strong> These aromatics and simple salt and pepper balance this savory pie. </li>
+                <li><strong>Chicken Stock & Cream -</strong> For a creamy gravy sauce.</li>
+              </ul>
+            
+            <h3>Steps</h3>  
+              <ol>
+                  <li><strong>Sautee vegetables</strong> in 6 Tbsp of butter until soft. </li>
+                  <li><strong>Add mushrooms</strong> and garlic and saute 5 min. </li>
+                  <li><strong>Add cream and broth</strong> and simmer until thickened.</li>
+                  <li><strong>Stir in chicken</strong>, peas, and parsley and remove from heat.</li>
+                  <li><strong>Roll out pie crust</strong> to 12″ and transfer to a pie pan. </li>
+                  <li><strong>Add filling into crust</strong> and cover with the second crust. </li>
+                  <li><strong>Crimp edges</strong>, cut slits, brush with egg wash and bake. </li>
+              </ol>
     </body>
 </html>
