--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
+          <ul>
+              <li><a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie</a></li>
+              <li></li>
+              <li></li>
+          </ul>
     </body>
 </html>
