added cucumber salad recipe page and linked to index

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <h1>Odin Recipes</h1>
           <ul>
-              <li><a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie</a></li>
-              <li></li>
+              <li><a href="./recipes/chicken-pot-pie.html">Homemade Chicken Pot Pie</a></li>
+              <li><a href="./recipes/cucumber-salad.html">Quick and Easy Cucumber Salad</a></li>
               <li></li>
           </ul>
     </body>
