--- a/recipes/chicken-pot-pie.html
+++ b/recipes/chicken-pot-pie.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chicken Pot Pie</title>
+        <title>Chicken Pot Pie Recipe</title>
         <meta charset="utf-8">
     </head>
 
     <body>
-        <h1>Chicken Pot Pie</h1>
+        <h1>Chicken Pot Pie Recipe</h1>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1092033.jpg&w=596&h=792&c=sc&poi=face&q=85" alt="piece of chicken pot pit on a plate">
           <h2>Homemade Chicken Pot Pie</h2>
             <p>A chicken pot pie, loaded with vegetables and protein, is a meal in itself. The high quality ingredients and generous filling really differentiates this from the ones you’ll find in the freezer section. Once you try homemade, there’s no going back!</p>
