--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <ul>
               <li><a href="./recipes/chicken-pot-pie.html">Homemade Chicken Pot Pie</a></li>
               <li><a href="./recipes/cucumber-salad.html">Quick and Easy Cucumber Salad</a></li>
-              <li></li>
+              <li><a href="./recipes/baked-ziti.html">Cheesy Baked Ziti</a></li>
           </ul>
     </body>
 </html>
